# celestial_biome_app

./: .gitignore  README.md  docker-compose.yml
backend/: .env.dev  .env.example  Dockerfile  README.md  conftest.py  pyproject.toml  requirements.txt
backend/accounts/: serializers.py  urls.py  views.py
backend/config/: middleware.py  settings.py  urls.py
backend/images/: apps.py  models.py  serializers.py  storage.py  urls.py  views.py
backend/images/migrations/: 0001_initial.py
backend/tests/: test_settings.py
frontend/: .env.local  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/.next/: _events.json  app-build-manifest.json  trace
frontend/.next/cache/: config.json
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/client-development-fallback/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/auth/login/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/images/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/chunks/app/: layout.js
frontend/.next/static/chunks/app/auth/login/: page.js
frontend/.next/static/chunks/app/images/: page.js
frontend/.next/static/css/app/: layout.css
frontend/.next/static/webpack/: 2c9a722cb106b1fb.webpack.hot-update.json  webpack.0ecf22e6576ea0e3.hot-update.js  webpack.1150467b00f899d4.hot-update.js  webpack.13c0bc6951f86641.hot-update.js  webpack.1cffe385e8ffa351.hot-update.js  webpack.2c9a722cb106b1fb.hot-update.js  webpack.2d9db779537740ff.hot-update.js  webpack.7165c7b14160b080.hot-update.js  webpack.793041f2860a9c7d.hot-update.js  webpack.7eb8d8ae01de9b70.hot-update.js  webpack.82e661ca7f0d9767.hot-update.js  webpack.968a1810f47006ab.hot-update.js  webpack.e016f44d37051c20.hot-update.js
frontend/.next/static/webpack/app/: layout.0ecf22e6576ea0e3.hot-update.js  layout.1150467b00f899d4.hot-update.js  layout.2c9a722cb106b1fb.hot-update.js  layout.7165c7b14160b080.hot-update.js  layout.793041f2860a9c7d.hot-update.js
frontend/.next/static/webpack/app/auth/login/: page.2c9a722cb106b1fb.hot-update.js  page.793041f2860a9c7d.hot-update.js
frontend/.next/types/app/images/: page.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/images/: page.tsx
frontend/lib/: api.ts
