[project]
name = "config"
version = "0.1.0"
description = "Modern Django REST Framework Project with uv and Ruff"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "djangorestframework>=3.15,<3.16",
    "djangorestframework-simplejwt>=5.3,<5.4",
    "psycopg2-binary>=2.9,<3.0",
    "gunicorn>=21.2",
    "Pillow>=10.0,<11.0",
    "django-cors-headers==4.4.0",
    "dj-database-url>=2.1,<3.0",
    "django-storages[google]>=1.14,<1.15",
    "google-cloud-storage>=2.0,<3.0",
    "drf-spectacular>=0.27",  # OpenAPIスキーマ
    "django-filter>=24.2",    # フィルタリング
    "dj-rest-auth>=6.0",      # 認証
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Ruff 設定 (Linter & Formatter) ---
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "DJ"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Pytest 設定 ---
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings --reuse-db"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

# --- Dev Dependencies (uvが管理) ---
[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "pytest>=8.3",
    "pytest-django>=4.9",
]